k8s/skyline-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: skyline-mockingbird
  namespace: skyline
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8089
    name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: skyline-mockingbird
  namespace: skyline
subsets:
- addresses:
  - ip: 192.168.1.128
  ports:
  - port: 8089
    name: http
