k8s/skyline-service-regular.yaml
apiVersion: v1
kind: Service
metadata:
  name: skyline-mockingbird
  namespace: skyline
spec:
  type: ClusterIP
  selector:
    app: skyline
  ports:
  - port: 80
    targetPort: 8089
    name: http
