k8s/skyline-ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skyline-mockingbird
  namespace: skyline
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: fd626bab5f3cf5913efb95d8d7c007d4.medher.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skyline-mockingbird
            port:
              number: 80
